timingsafe_bcmp.3: Add missing .Lb.

--- a/lib/libc/string/timingsafe_bcmp.3
+++ b/lib/libc/string/timingsafe_bcmp.3
@@ -21,6 +21,8 @@
 .Nm timingsafe_bcmp ,
 .Nm timingsafe_memcmp
 .Nd timing-safe byte sequence comparisons
+.Sh LIBRARY
+.Lb libc
 .Sh SYNOPSIS
 .In string.h
 .Ft int
