libc: Adjust HISTORY sections in a few recently added manual pages.

--- a/lib/libc/stdlib/reallocarray.3
+++ b/lib/libc/stdlib/reallocarray.3
@@ -146,13 +146,13 @@ if ((newp = reallocarray(p, num, size)) == NULL) {
 The
 .Fn reallocarray
 function first appeared in
-.Ox
-/
-.Dx 5.6 .
+.Ox 5.6
+and
+.Dx 5.5 .
 .Pp
 The
 .Fn recallocarray
 function appeared in
 .Ox 6.1
 and
-.Dx 5.6 .
+.Dx 5.5 .
