--- a/libexec/makewhatis.local/makewhatis.local.8
+++ b/libexec/makewhatis.local/makewhatis.local.8
@@ -23,19 +23,15 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/usr.bin/makewhatis/makewhatis.local.8,v 1.13 2002/07/14 15:12:00 charnier Exp $
-.\" $DragonFly: src/libexec/makewhatis.local/makewhatis.local.8,v 1.4 2005/08/05 22:35:10 swildner Exp $
-.Dd April 26, 1996
+.\"
+.Dd April 21, 2019
 .Dt MAKEWHATIS.LOCAL 8
 .Os
 .Sh NAME
-.Nm makewhatis.local ,
-.Nm catman.local
-.Nd start makewhatis or catman for local file systems
+.Nm makewhatis.local
+.Nd start makewhatis for local file systems
 .Sh SYNOPSIS
 .Nm /usr/libexec/makewhatis.local
-.Op options
-.Ar directories ...
-.Nm /usr/libexec/catman.local
 .Op options
 .Ar directories ...
 .Sh DESCRIPTION
@@ -54,25 +50,14 @@ your NFS server -- all NFS clients start makewhatis at the same time!
 So use this wrapper for
 .Xr cron 8
 instead of calling makewhatis directly.
-The
-.Nm catman.local
-utility is using for same purposes as
-.Nm
-but for
-.Xr catman 1 .
 .Sh FILES
 .Bl -tag -width /etc/periodic/weekly/320.whatis.XXX -compact
 .It Pa /etc/periodic/weekly/320.whatis
 run
 .Nm
 every week
-.It Pa /etc/periodic/weekly/330.catman
-run
-.Nm catman.local
-every week
 .El
 .Sh SEE ALSO
-.Xr catman 1 ,
 .Xr find 1 ,
 .Xr cron 8 ,
 .Xr makewhatis 8 ,
