pthread_set_name_np.3: Add some articles.

--- a/lib/libpthread/pthread_set_name_np.3
+++ b/lib/libpthread/pthread_set_name_np.3
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man3/pthread_set_name_np.3,v 1.6 2007/10/22 10:08:01 ru Exp $
 .\"
-.Dd November 19, 2015
+.Dd May 2, 2019
 .Dt PTHREAD_SET_NAME_NP 3
 .Os
 .Sh NAME
@@ -40,9 +40,9 @@
 .Sh DESCRIPTION
 The
 .Fn pthread_set_name_np
-function sets internal name for thread specified by
+function sets the internal name of the thread specified by the
 .Fa tid
-argument to string value specified by
+argument to the string value specified by the
 .Fa name
 argument.
 .Sh ERRORS
