--- a/lib/libc/net/getservent.3
+++ b/lib/libc/net/getservent.3
@@ -28,13 +28,16 @@
 .\"     From: @(#)getservent.3	8.3 (Berkeley) 1/12/94
 .\" $FreeBSD: src/lib/libc/net/getservent.3,v 1.15 2007/01/09 00:28:02 imp Exp $
 .\"
-.Dd July 9, 1995
+.Dd May 4, 2019
 .Dt GETSERVENT 3
 .Os
 .Sh NAME
 .Nm getservent ,
+.Nm getservent_r ,
 .Nm getservbyport ,
+.Nm getservbyport_r ,
 .Nm getservbyname ,
+.Nm getservbyname_r ,
 .Nm setservent ,
 .Nm endservent
 .Nd get service entry
@@ -44,10 +47,16 @@
 .In netdb.h
 .Ft struct servent *
 .Fn getservent void
+.Ft int
+.Fn getservent_r "struct servent *" "char *" "size_t" "struct servent **"
 .Ft struct servent *
 .Fn getservbyname "const char *name" "const char *proto"
+.Ft int
+.Fn getservbyname_r "const char *" "const char *" "struct servent *" "char *" "size_t" "struct servent **"
 .Ft struct servent *
 .Fn getservbyport "int port" "const char *proto"
+.Ft int
+.Fn getservbyport_r "int" "const char *" "struct servent *" "char *" "size_t" "struct servent **"
 .Ft void
 .Fn setservent "int stayopen"
 .Ft void
@@ -125,18 +134,63 @@ is encountered.
 If a protocol name is also supplied (non-
 .Dv NULL ) ,
 searches must also match the protocol.
+.Pp
+The
+.Fn getservent_r ,
+.Fn getservbyport_r ,
+and
+.Fn getservbyname_r
+functions are reentrant versions of the above functions that take a
+pointer to a
+.Fa servent
+structure which is used to store state information.
+The structure must be zero-filled before it is used
+and should be considered opaque for the sake of portability.
+These functions also take a pointer to another
+.Fa servent
+structure which is used to store the results of the database lookup.
+.Sh RETURN VALUES
+The
+.Fn getservent ,
+.Fn getservbyport ,
+and
+.Fn getservbyname
+functions return a pointer to a
+.Vt servent
+structure on success or a null pointer if end-of-file
+is reached or an error occurs.
+.Pp
+The
+.Fn getservent_r ,
+.Fn getservbyport_r ,
+and
+.Fn getservbyname_r
+functions return 0 on success or \-1 if end-of-file
+is reached or an error occurs.
 .Sh FILES
-.Bl -tag -width /etc/services -compact
+.Bl -tag -width ".Pa /etc/services" -compact
 .It Pa /etc/services
 .El
-.Sh DIAGNOSTICS
-Null pointer
-(0) returned on
-.Dv EOF
-or error.
 .Sh SEE ALSO
 .Xr getprotoent 3 ,
 .Xr services 5
+.Sh STANDARDS
+The
+.Fn getservent ,
+.Fn getservbynumber ,
+.Fn getservbyname ,
+.Fn setservent ,
+and
+.Fn endservent
+functions conform to
+.St -p1003.1-2004 .
+.Pp
+The
+.Fn getservent_r ,
+.Fn getservbyport_r ,
+and
+.Fn getservbyname_r
+functions are not currently standardized.
 .Sh HISTORY
 The
 .Fn getservent ,
@@ -147,6 +201,14 @@ and
 .Fn endservent
 functions appeared in
 .Bx 4.2 .
+.Pp
+The
+.Fn getservent_r ,
+.Fn getservbyport_r ,
+and
+.Fn getservbyname_r
+functions appeared in
+.Dx 2.1 .
 .Sh BUGS
 These functions use a thread-specific data storage;
 if the data is needed for future use, it should be
