getservent.3: Fix function name.

--- a/lib/libc/net/getservent.3
+++ b/lib/libc/net/getservent.3
@@ -177,7 +177,7 @@ is reached or an error occurs.
 .Sh STANDARDS
 The
 .Fn getservent ,
-.Fn getservbynumber ,
+.Fn getservbyport ,
 .Fn getservbyname ,
 .Fn setservent ,
 and
