--- a/lib/libc/net/gethostbyname.3
+++ b/lib/libc/net/gethostbyname.3
@@ -28,14 +28,18 @@
 .\"     From: @(#)gethostbyname.3	8.4 (Berkeley) 5/25/95
 .\" $FreeBSD: src/lib/libc/net/gethostbyname.3,v 1.38 2007/01/09 00:28:02 imp Exp $
 .\"
-.Dd May 5, 2019
+.Dd May 6, 2019
 .Dt GETHOSTBYNAME 3
 .Os
 .Sh NAME
 .Nm gethostbyname ,
+.Nm gethostbyname_r ,
 .Nm gethostbyname2 ,
+.Nm gethostbyname2_r ,
 .Nm gethostbyaddr ,
+.Nm gethostbyaddr_r ,
 .Nm gethostent ,
+.Nm gethostent_r ,
 .Nm sethostent ,
 .Nm endhostent ,
 .Nm herror ,
@@ -48,12 +52,20 @@
 .Vt int h_errno ;
 .Ft struct hostent *
 .Fn gethostbyname "const char *name"
+.Ft int
+.Fn gethostbyname_r "const char *name" "struct hostent *he" "char *buffer" "size_t buflen" "struct hostent **result" "int *h_errnop"
 .Ft struct hostent *
 .Fn gethostbyname2 "const char *name" "int af"
+.Ft int
+.Fn gethostbyname2_r "const char *name" "int af" "struct hostent *he" "char *buffer" "size_t buflen" "struct hostent **result" "int *h_errnop"
 .Ft struct hostent *
 .Fn gethostbyaddr "const void *addr" "socklen_t len" "int type"
+.Ft int
+.Fn gethostbyaddr_r "const void *addr" "socklen_t len" "int af" "struct hostent *he" "char *buffer" "size_t buflen" "struct hostent **result" "int *h_errnop"
 .Ft struct hostent *
 .Fn gethostent void
+.Ft int
+.Fn gethostent_r "struct hostent *he" "char *buffer" "size_t buflen" "struct hostent **result" "int *h_errnop"
 .Ft void
 .Fn sethostent "int stayopen"
 .Ft void
@@ -226,6 +238,22 @@ function returns a string which is the message text corresponding to the
 value of the
 .Fa err
 argument.
+.Pp
+The
+.Fn gethostent_r ,
+.Fn gethostbyaddr_r ,
+.Fn gethostbyname_r ,
+and
+.Fn gethostbyname_r
+functions are reentrant versions of the above functions that take a
+pointer to a
+.Vt hostent
+structure which is used to store state information.
+The structure must be zero-filled before it is used
+and should be considered opaque for the sake of portability.
+These functions also take a pointer to another
+.Vt hostent
+structure which is used to store the results of the database lookup.
 .Sh RETURN VALUES
 Error return status from
 .Fn gethostbyname ,
@@ -248,6 +276,15 @@ is
 .Pf non- Dv NULL ,
 it is printed, followed by a colon and a space.
 The error message is printed with a trailing newline.
+.Pp
+The
+.Fn gethostent_r ,
+.Fn gethostbyaddr_r ,
+.Fn gethostbyname_r ,
+and
+.Fn gethostbyname2_r
+functions return 0 on success or \-1 if end-of-file
+is reached or an error occurs.
 .Sh FILES
 .Bl -tag -width ".Pa /etc/nsswitch.conf" -compact
 .It Pa /etc/hosts
@@ -302,6 +339,25 @@ for example, a mail-forwarder may be registered for this domain.
 .Xr hosts 5 ,
 .Xr hostname 7 ,
 .Xr named 8
+.Sh STANDARDS
+The
+.Fn gethostent ,
+.Fn sethostent ,
+and
+.Fn endhostent
+functions conform to
+.St -p1003.1-2004 .
+.Pp
+The
+.Fn gethostbyaddr ,
+.Fn gethostbyaddr_r ,
+.Fn gethostbyname ,
+.Fn gethostbyname_r ,
+.Fn gethostbyname2 ,
+.Fn gethostbyname2_r ,
+and
+.Fn gethostent_r
+functions are not currently standardized.
 .Sh CAVEATS
 The
 .Fn gethostent
@@ -361,6 +417,15 @@ The
 function first appeared in
 .Tn BIND
 version 4.9.4.
+.Pp
+The
+.Fn gethostent_r ,
+.Fn gethostbyaddr_r ,
+.Fn getnetbyname_r ,
+and
+.Fn gethostbyname2_r ,
+functions appeared in
+.Dx 2.1 .
 .Sh BUGS
 These functions use a thread-specific data storage;
 if the data is needed for future use, it should be
