--- a/lib/libc/sys/pathconf.2
+++ b/lib/libc/sys/pathconf.2
@@ -28,7 +28,7 @@
 .\"	@(#)pathconf.2	8.1 (Berkeley) 6/4/93
 .\" $FreeBSD: src/lib/libc/sys/pathconf.2,v 1.4.2.6 2001/12/14 18:34:01 ru Exp $
 .\"
-.Dd April 13, 2013
+.Dd May 12, 2019
 .Dt PATHCONF 2
 .Os
 .Sh NAME
@@ -172,6 +172,9 @@ is not a valid open file descriptor.
 An I/O error occurred while reading from or writing to the file system.
 .El
 .Sh SEE ALSO
+.Xr getconf 1 ,
+.Xr confstr 3 ,
+.Xr sysconf 3 ,
 .Xr sysctl 3
 .Sh HISTORY
 The
