Clean up a few math related manualpages.
* In frexp.3, change the library to libc, because it is part of libc,
  not libm (anymore).

* In fpclassify.3 and signbit.3, remove the LIBRARY section, because
  all these are macros from <math.h>.

--- a/lib/libc/gen/frexp.3
+++ b/lib/libc/gen/frexp.3
@@ -32,7 +32,7 @@
 .\"     @(#)frexp.3	8.1 (Berkeley) 6/4/93
 .\" $FreeBSD: head/lib/libc/gen/frexp.3 206616 2010-04-14 18:29:34Z uqs $
 .\"
-.Dd March 4, 2005
+.Dd May 28, 2019
 .Dt FREXP 3
 .Os
 .Sh NAME
@@ -41,7 +41,7 @@
 .Nm frexpl
 .Nd convert floating-point number to fractional and integral components
 .Sh LIBRARY
-.Lb libm
+.Lb libc
 .Sh SYNOPSIS
 .In math.h
 .Ft double
