sysctl.8: Revert 39d69daecef529eb49d36fefa429c8ac08e7cbc1.
The manpage just says whether it's a number, a string or something
else, not the exact type.

--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -27,9 +27,8 @@
 .\"
 .\"	From: @(#)sysctl.8	8.1 (Berkeley) 6/6/93
 .\" $FreeBSD: src/sbin/sysctl/sysctl.8,v 1.23.2.17 2003/05/19 07:49:34 brueffer Exp $
-.\" $DragonFly: src/sbin/sysctl/sysctl.8,v 1.7 2007/10/02 12:57:00 hasso Exp $
 .\"
-.Dd February 3, 2011
+.Dd May 30, 2019
 .Dt SYSCTL 8
 .Os
 .Sh NAME
@@ -199,7 +198,7 @@ denote
 .It "hw.model	string	no"
 .It "hw.ncpu	integer	no"
 .It "hw.byteorder	integer	no"
-.It "hw.physmem	long	no"
+.It "hw.physmem	integer	no"
 .It "hw.usermem	integer	no"
 .It "hw.pagesize	integer	no"
 .It "hw.floatingpoint	integer	no"
