--- a/lib/libc/sys/sigaltstack.2
+++ b/lib/libc/sys/sigaltstack.2
@@ -28,7 +28,7 @@
 .\"     @(#)sigaltstack.2	8.2 (Berkeley) 5/1/95
 .\" $FreeBSD: src/lib/libc/sys/sigaltstack.2,v 1.11.2.7 2002/09/15 00:32:41 archie Exp $
 .\"
-.Dd February 22, 2018
+.Dd June 12, 2019
 .Dt SIGALTSTACK 2
 .Os
 .Sh NAME
@@ -40,7 +40,7 @@
 .In signal.h
 .Bd -literal
 typedef struct sigaltstack {
-        char    *ss_sp;
+        void    *ss_sp;
         size_t  ss_size;
         int     ss_flags;
 } stack_t;
