--- a/sbin/rconfig/rconfig.8
+++ b/sbin/rconfig/rconfig.8
@@ -1,4 +1,3 @@
-.\" $DragonFly: src/sbin/rconfig/rconfig.8,v 1.7 2008/09/07 08:18:54 swildner Exp $
 .\"
 .\" Copyright (c) 2003,2004 The DragonFly Project.  All rights reserved.
 .\"
@@ -32,7 +31,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 17, 2004
+.Dd June 16, 2019
 .Dt RCONFIG 8
 .Os
 .Sh NAME
@@ -97,6 +96,9 @@ Specify the directory containing the tag scripts.  The default is
 .Pa /usr/local/etc/rconfig .
 Tag scripts are in the form:
 .Pa tagname.sh .
+The tag name can only consist of alphabets (lower and upper letters),
+digits (zero to nine), underscore (_), dot (.),
+minus (-) and plus (+) symbols.
 .It Fl C Ar configfiles
 Specify server configuration files (currently unused).
 .It Fl s
