--- a/usr.sbin/jail/jail.8
+++ b/usr.sbin/jail/jail.8
@@ -33,7 +33,7 @@
 .\"
 .\" $FreeBSD: src/usr.sbin/jail/jail.8,v 1.13.2.15 2003/05/08 13:04:24 maxim Exp $
 .\"
-.Dd August 6, 2009
+.Dd June 18, 2019
 .Dt JAIL 8
 .Os
 .Sh NAME
@@ -356,6 +356,9 @@ MIB variables.
 Currently, these variables affect all jails on the system, although in
 the future this functionality may be finer grained.
 .Bl -tag -width XXX
+.It Va jail.jailed
+The read-only entry can be used to determine if a process is running inside
+a jail (value is 1) or not (value is 0).
 .It Va jail.set_hostname_allowed
 This MIB entry determines whether or not processes within a jail are
 allowed to change their hostname via
