--- a/lib/libc/sys/clock_gettime.2
+++ b/lib/libc/sys/clock_gettime.2
@@ -29,7 +29,7 @@
 .\"
 .\" $FreeBSD: head/lib/libc/sys/clock_gettime.2 292777 2015-12-27 15:37:07Z dchagin $
 .\"
-.Dd July 26, 2017
+.Dd June 17, 2019
 .Dt CLOCK_GETTIME 2
 .Os
 .Sh NAME
@@ -165,8 +165,7 @@ A user other than the super-user attempted to set the time.
 .Xr adjtime 2 ,
 .Xr clock_getcpuclockid 3 ,
 .Xr ctime 3 ,
-.Xr pthread_getcpuclockid 3 ,
-.Xr timed 8
+.Xr pthread_getcpuclockid 3
 .Sh STANDARDS
 The
 .Fn clock_gettime ,
