--- a/lib/libc/sys/gettimeofday.2
+++ b/lib/libc/sys/gettimeofday.2
@@ -28,7 +28,7 @@
 .\"     @(#)gettimeofday.2	8.2 (Berkeley) 5/26/95
 .\" $FreeBSD: src/lib/libc/sys/gettimeofday.2,v 1.9.2.9 2003/02/11 06:05:00 nsayer Exp $
 .\"
-.Dd March 26, 2016
+.Dd June 17, 2019
 .Dt GETTIMEOFDAY 2
 .Os
 .Sh NAME
@@ -125,8 +125,7 @@ A user other than the super-user attempted to set the time.
 .Xr date 1 ,
 .Xr adjtime 2 ,
 .Xr ctime 3 ,
-.Xr clocks 7 ,
-.Xr timed 8
+.Xr clocks 7
 .Sh HISTORY
 The
 .Fn gettimeofday
