--- a/lib/libc/sys/adjtime.2
+++ b/lib/libc/sys/adjtime.2
@@ -28,7 +28,7 @@
 .\"     @(#)adjtime.2	8.1 (Berkeley) 6/4/93
 .\" $FreeBSD: src/lib/libc/sys/adjtime.2,v 1.6.2.4 2001/12/14 18:34:00 ru Exp $
 .\"
-.Dd June 4, 1993
+.Dd June 17, 2019
 .Dt ADJTIME 2
 .Os
 .Sh NAME
@@ -92,14 +92,7 @@ The process's effective user ID is not that of the super-user.
 .El
 .Sh SEE ALSO
 .Xr date 1 ,
-.Xr gettimeofday 2 ,
-.Xr timed 8 ,
-.Xr timedc 8
-.Rs
-.%T "TSP: The Time Synchronization Protocol for UNIX 4.3BSD"
-.%A R. Gusella
-.%A S. Zatti
-.Re
+.Xr gettimeofday 2
 .Sh HISTORY
 The
 .Fn adjtime
