--- a/usr.sbin/rdate/rdate.8
+++ b/usr.sbin/rdate/rdate.8
@@ -29,7 +29,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 30, 1994
+.Dd June 17, 2019
 .Dt RDATE 8
 .Os
 .Sh NAME
@@ -112,5 +112,4 @@ adjustment, put the following line into root's crontab:
 .Xr date 1 ,
 .Xr adjtime 2 ,
 .Xr inetd 8 ,
-.Xr ntpd 8 Pq Pa net/openntpd ,
-.Xr timed 8
+.Xr ntpd 8 Pq Pa net/openntpd
