axe.4: Add back rgephy(4) reference.

--- a/share/man/man4/axe.4
+++ b/share/man/man4/axe.4
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/axe.4 252186 2013-06-25 00:29:13Z yongari $
 .\"
-.Dd November 16, 2018
+.Dd June 22, 2019
 .Dt AXE 4
 .Os
 .Sh NAME
@@ -241,7 +241,7 @@ The driver failed to allocate an mbuf for the receiver ring.
 .Xr miibus 4 ,
 .Xr netintro 4 ,
 .Xr ng_ether 4 ,
-.\".Xr rgephy 4 ,
+.Xr rgephy 4 ,
 .Xr vlan 4 ,
 .Xr ifconfig 8
 .Rs
