Fix two typos in manual pages.

--- a/usr.sbin/jail/jail.8
+++ b/usr.sbin/jail/jail.8
@@ -378,7 +378,7 @@ treated by
 If zero, such users are treated as unprivileged, and are unable to set
 or clear system file flags; if non-zero, such users are treated as
 privileged, and may manipulate system file flags subject to the usual
-constaints on
+constraints on
 .Va kern.securelevel .
 .It Va jail.jailed
 This read-only MIB entry can be used to determine if a process is running
