Add some missing whitespace/linefeeds in a few manpages.

--- a/lib/libc/stdio/printf.3
+++ b/lib/libc/stdio/printf.3
@@ -171,7 +171,8 @@ functions
 effectively assume a
 .Fa size
 of
-.Dv INT_MAX + 1.
+.Fa INT_MAX
++ 1.
 .Pp
 The format string is composed of zero or more directives:
 ordinary
