--- a/lib/libc/sys/rtprio.2
+++ b/lib/libc/sys/rtprio.2
@@ -83,7 +83,8 @@ for idle priorities.
 The priority specified by the
 .Nm prio
 field ranges between 0 and
-.Dv RTP_PRIO_MAX (usually 31) .
+.Dv RTP_PRIO_MAX
+(usually 31).
 0 is the highest possible priority.
 .Pp
 Realtime and idle priority is inherited through
