--- a/share/man/man4/vinum.4
+++ b/share/man/man4/vinum.4
@@ -348,7 +348,8 @@ volume.
 ignores the
 .Dv DIOCWDINFO
 and
-.Dv DIOCSDINFO ioctls, since there is nothing to change.
+.Dv DIOCSDINFO
+ioctls, since there is nothing to change.
 As a result, any attempt to modify the disk label will be silently ignored.
 .Sh MAKING FILE SYSTEMS
 Since
