--- a/share/man/man9/mutex.9
+++ b/share/man/man9/mutex.9
@@ -209,7 +209,8 @@ functions return 0 on success, or the
 .Fn tsleep
 return code on failure.
 An error can only be returned if
-.Dv PCATCH is specified in the flags.
+.Dv PCATCH
+is specified in the flags.
 .Pp
 The
 .Fn mtx_spinlock
