--- a/lib/libc/gen/shm_open.3
+++ b/lib/libc/gen/shm_open.3
@@ -28,7 +28,7 @@
 .\"
 .\" $FreeBSD: src/lib/libc/gen/shm_open.3,v 1.3.2.5 2001/12/14 18:33:51 ru Exp $
 .\"
-.Dd March 24, 2000
+.Dd June 28, 2019
 .Dt SHM_OPEN 3
 .Os
 .Sh NAME
@@ -58,7 +58,7 @@ function removes a shared memory object named
 Using the same
 .Fa path
 allows unrelated processes to access the same object.
-.Pp
+.Sh IMPLEMENTATION NOTES
 .Dx
 mounts a
 .Xr tmpfs 5
@@ -118,12 +118,12 @@ On
 and many other operating systems the
 .Fa path
 argument is interpreted as a file system pathname under a special
-directory where a memory-backed file system is mounted.  Most
-operating systems do some name mangling to
+directory where a memory-backed file system is mounted.
+Most operating systems do some name mangling to
 .Fa path .
 Leading slashes are commonly removed to turn an absolute pathname into
-a relative one.  Problematic characters may be escaped and there may
-be a length limit on
+a relative one.
+Problematic characters may be escaped and there may be a length limit on
 .Fa path .
 On some systems the mangled pathname is completely different from the
 given
@@ -137,9 +137,10 @@ two processes opening the same
 .Fa path
 are guaranteed to access the same shared memory object if and only if
 .Fa path
-begins with a slash. The most portable form of pathname is probably
+begins with a slash.
+The most portable form of pathname is probably
 .Ql /foobar ,
-i.e. one leading slash, no other slashes and no dots.
+i.e.\& one leading slash, no other slashes and no dots.
 .Pp
 The result of using
 .Xr open 2
@@ -153,9 +154,11 @@ on a file descriptor returned by
 is undefined by
 .Tn POSIX .
 It is also undefined whether the shared memory object itself, or its
-contents, persist across reboots.  On
+contents, persist across reboots.
+On
 .Dx
-and most other systems they do not.  Only the
+and most other systems they do not.
+Only the
 .Dv O_RDONLY ,
 .Dv O_RDWR ,
 .Dv O_CREAT ,
@@ -172,7 +175,8 @@ functions can fail with any error defined for
 .Fn open
 and
 .Fn unlink ,
-respectively.  In addition, the following errors are defined for
+respectively.
+In addition, the following errors are defined for
 .Fn shm_open :
 .Bl -tag -width Er
 .It Bq Er EINVAL
